--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -120,11 +120,12 @@
   </div>
 
   <script>
-    const VERSION = "1.0.2";
+    const VERSION = "1.0.3"; // Atualizado para depuração
     let produtos = [];
     let currentImages = [];
     let currentImageIndex = 0;
 
+    // Desativar MetaMask
     if (window.ethereum) {
       console.log("MetaMask detectado, desativando temporariamente");
       window.ethereum = null;
@@ -135,6 +136,7 @@
         const storedProdutos = localStorage.getItem('produtos');
         produtos = storedProdutos ? JSON.parse(storedProdutos) : [];
         if (!Array.isArray(produtos)) produtos = [];
+        console.log("Produtos inicializados:", produtos.length); // Log inicial
       } catch (e) {
         console.error('Erro ao carregar produtos do localStorage:', e);
         produtos = [];
@@ -147,6 +149,7 @@
       if (token && githubTokenInput) {
         githubTokenInput.value = token;
       }
+      console.log("Token carregado:", !!token); // Log do token
     }
 
     function salvarToken() {
@@ -154,7 +157,7 @@
       const mensagem = document.getElementById('mensagem');
       const erro = document.getElementById('erro');
       if (!githubTokenInput || !mensagem || !erro) {
-        console.error('Elementos DOM não encontrados');
+        console.error('Elementos DOM não encontrados em salvarToken');
         return;
       }
       const token = githubTokenInput.value.trim();
@@ -166,6 +169,7 @@
       localStorage.setItem('github_token', token);
       mensagem.textContent = 'Token salvo com sucesso!';
       erro.textContent = '';
+      console.log("Token salvo"); // Log
     }
 
     function configurarEventos() {
@@ -174,54 +178,68 @@
       const erro = document.getElementById('erro');
       const loading = document.getElementById('loading');
       if (!formProduto || !mensagem || !erro || !loading) {
-        console.error('Elementos DOM não encontrados');
+        console.error('Elementos DOM não encontrados em configurarEventos:', { formProduto, mensagem, erro, loading });
+        erro.textContent = 'Erro interno: Elementos da página não encontrados!';
         return;
       }
 
       formProduto.addEventListener('submit', async (e) => {
         e.preventDefault();
         e.stopPropagation();
+        console.log("Formulário submetido"); // Log inicial
         mensagem.textContent = '';
         erro.textContent = '';
         loading.style.display = 'block';
 
-        const nome = e.target.querySelector('input[name="nome"]').value.trim();
-        const categoria = e.target.querySelector('select[name="categoria"]').value;
-        const loja = e.target.querySelector('select[name="loja"]').value;
-        const link = e.target.querySelector('input[name="link"]').value.trim();
-        const preco = parseFloat(e.target.querySelector('input[name="preco"]').value);
-        const imagens = e.target.querySelector('input[name="imagens"]').files;
-
-        if (!nome || !categoria || !loja || !link || isNaN(preco)) {
-          erro.textContent = 'Todos os campos são obrigatórios!';
-          loading.style.display = 'none';
-          return;
-        }
-        if (preco < 0 || preco > 100000) {
-          erro.textContent = 'O preço deve estar entre R$ 0,00 e R$ 100.000,00!';
-          loading.style.display = 'none';
-          return;
-        }
-        if (!link.match(/^https:\/\/.*\?.+=.+/)) {
-          erro.textContent = 'Insira um link de afiliado válido com parâmetros (ex.: ?aff=123 ou tag=)!';
-          loading.style.display = 'none';
-          return;
-        }
-        if (imagens.length === 0) {
-          erro.textContent = 'Pelo menos uma imagem deve ser escolhida!';
-          loading.style.display = 'none';
-          return;
-        }
-        if (imagens.length > 3) {
-          erro.textContent = 'Máximo de 3 imagens por produto!';
-          loading.style.display = 'none';
-          return;
-        }
-
         try {
+          console.log("Coletando dados do formulário"); // Log
+          const nome = e.target.querySelector('input[name="nome"]').value.trim();
+          const categoria = e.target.querySelector('select[name="categoria"]').value;
+          const loja = e.target.querySelector('select[name="loja"]').value;
+          const link = e.target.querySelector('input[name="link"]').value.trim();
+          const preco = parseFloat(e.target.querySelector('input[name="preco"]').value);
+          const imagens = e.target.querySelector('input[name="imagens"]').files;
+
+          console.log("Dados coletados:", { nome, categoria, loja, link, preco, imagens: imagens.length }); // Log
+
+          // Validações
+          if (!nome || !categoria || !loja || !link || isNaN(preco)) {
+            console.warn("Validação falhou: Campos obrigatórios"); // Log
+            erro.textContent = 'Todos os campos são obrigatórios!';
+            loading.style.display = 'none';
+            return;
+          }
+          if (preco < 0 || preco > 100000) {
+            console.warn("Validação falhou: Preço inválido"); // Log
+            erro.textContent = 'O preço deve estar entre R$ 0,00 e R$ 100.000,00!';
+            loading.style.display = 'none';
+            return;
+          }
+          // Validação do link relaxada para testes
+          if (!link.match(/^https?:\/\/.+/)) {
+            console.warn("Validação falhou: Link inválido"); // Log
+            erro.textContent = 'Insira um link válido (ex.: https://...)!';
+            loading.style.display = 'none';
+            return;
+          }
+          if (imagens.length === 0) {
+            console.warn("Validação falhou: Sem imagens"); // Log
+            erro.textContent = 'Pelo menos uma imagem deve ser escolhida!';
+            loading.style.display = 'none';
+            return;
+          }
+          if (imagens.length > 3) {
+            console.warn("Validação falhou: Muitas imagens"); // Log
+            erro.textContent = 'Máximo de 3 imagens por produto!';
+            loading.style.display = 'none';
+            return;
+          }
+
+          console.log("Processando imagens"); // Log
           const imagensArray = [];
           for (const file of imagens) {
             try {
+              console.log("Redimensionando imagem:", file.name); // Log
               const resizedBlob = await resizeImage(file, 300, 300);
               const dataUrl = await new Promise((resolve, reject) => {
                 const reader = new FileReader();
@@ -230,32 +248,55 @@
                 reader.readAsDataURL(resizedBlob);
               });
               imagensArray.push(dataUrl);
+              console.log("Imagem processada:", file.name); // Log
             } catch (imgError) {
-              console.warn(`Imagem ${file.name} ignorada: ${imgError.message}`);
+              console.warn(`Imagem ${file.name} ignorada: ${imgError.message}`); // Log
               erro.textContent += `Aviso: Imagem ${file.name} ignorada devido a erro. `;
             }
           }
 
           if (imagensArray.length === 0) {
+            console.warn("Nenhuma imagem válida processada"); // Log
             erro.textContent = 'Nenhuma imagem válida foi processada!';
             loading.style.display = 'none';
             return;
           }
 
+          console.log("Criando novo produto"); // Log
           const novoProduto = { nome, categoria, loja, link, preco, imagens: imagensArray };
           produtos.push(novoProduto);
-          localStorage.setItem('produtos', JSON.stringify(produtos));
+
+          // Verificar localStorage
+          try {
+            console.log("Salvando no localStorage"); // Log
+            localStorage.setItem('produtos', JSON.stringify(produtos));
+          } catch (storageError) {
+            console.error("Erro ao salvar no localStorage:", storageError); // Log
+            erro.textContent = 'Erro ao salvar no armazenamento local. Limpe o cache e tente novamente!';
+            loading.style.display = 'none';
+            return;
+          }
+
+          console.log("Atualizando JSON e lista"); // Log
           atualizarJSON();
           atualizarListaProdutos();
 
-          await atualizarGitHub(true);
+          // Tentar sincronizar com GitHub, mas não bloquear o cadastro
+          console.log("Tentando sincronizar com GitHub"); // Log
+          try {
+            await atualizarGitHub(true);
+            mensagem.textContent = 'Produto cadastrado e sincronizado com o GitHub! Pode demorar alguns minutos para aparecer na página principal.';
+          } catch (gitError) {
+            console.warn("Erro na sincronização com GitHub:", gitError); // Log
+            mensagem.textContent = 'Produto cadastrado localmente, mas falha na sincronização com o GitHub. Verifique o token!';
+            erro.textContent = gitError.message || 'Erro ao sincronizar com o GitHub.';
+          }
 
-          mensagem.textContent = 'Produto cadastrado e sincronizado com o GitHub! Pode demorar alguns minutos para aparecer na página principal.';
-          erro.textContent = '';
+          console.log("Cadastro concluído"); // Log
           e.target.reset();
         } catch (error) {
-          console.error('Erro ao adicionar produto:', error);
-          erro.textContent = error.message || 'Erro ao processar o cadastro. Tente novamente.';
+          console.error('Erro ao adicionar produto:', error); // Log
+          erro.textContent = error.message || 'Erro ao processar o cadastro. Verifique os dados e tente novamente.';
           mensagem.textContent = '';
         }
         loading.style.display = 'none';
@@ -272,6 +313,7 @@
 
     async function resizeImage(file, maxWidth, maxHeight) {
       return new Promise((resolve, reject) => {
+        console.log("Verificando imagem:", file.name, file.size, file.type); // Log
         if (file.size > 2 * 1024 * 1024) {
           reject(new Error('Imagem muito grande. Máximo 2 MB.'));
           return;
@@ -315,6 +357,7 @@
       }
       try {
         jsonText.value = JSON.stringify(produtos, null, 2);
+        console.log("JSON atualizado"); // Log
       } catch (e) {
         console.error('Erro ao atualizar JSON:', e);
         const erro = document.getElementById('erro');
@@ -348,6 +391,7 @@
         `;
         listaProdutos.appendChild(tr);
       });
+      console.log("Lista de produtos atualizada"); // Log
     }
 
     function openModal(produtoIndex, imageIndex) {
@@ -365,6 +409,7 @@
       carrosselImagens.style.transform = `translateX(-${currentImageIndex * 100}%)`;
       carrosselDots.innerHTML = currentImages.map((_, i) => `<span class="carrossel-dot ${i === currentImageIndex ? 'ativo' : ''}" onclick="setModalCarrosselImage(${i})"></span>`).join('');
       modal.style.display = 'flex';
+      console.log("Modal aberto"); // Log
     }
 
     function moveModalCarrossel(direction) {
@@ -401,6 +446,7 @@
       modal.style.display = 'none';
       currentImages = [];
       currentImageIndex = 0;
+      console.log("Modal fechado"); // Log
     }
 
     async function excluirProduto(index) {
@@ -408,11 +454,12 @@
       const erro = document.getElementById('erro');
       const loading = document.getElementById('loading');
       if (!mensagem || !erro || !loading) {
-        console.error('Elementos DOM não encontrados');
+        console.error('Elementos DOM não encontrados em excluirProduto');
         return;
       }
       try {
         loading.style.display = 'block';
+        console.log("Excluindo produto:", index); // Log
         produtos.splice(index, 1);
         localStorage.setItem('produtos', JSON.stringify(produtos));
         atualizarJSON();
@@ -435,16 +482,18 @@
       const erro = document.getElementById('erro');
       const loading = document.getElementById('loading');
       if (!mensagem || !erro || !loading) {
-        console.error('Elementos DOM não encontrados');
+        console.error('Elementos DOM não encontrados em atualizarGitHub');
         return;
       }
       if (!token) {
+        console.warn("GitHub: Token não encontrado"); // Log
         erro.textContent = 'Por favor, insira e salve o GitHub Personal Access Token!';
         mensagem.textContent = '';
         if (!auto) loading.style.display = 'none';
         return;
       }
       if (!jsonText) {
+        console.warn("GitHub: JSON não encontrado"); // Log
         erro.textContent = 'JSON dos produtos não encontrado!';
         mensagem.textContent = '';
         if (!auto) loading.style.display = 'none';
@@ -452,6 +501,7 @@
       }
 
       try {
+        console.log("Iniciando sincronização com GitHub"); // Log
         loading.style.display = 'block';
         const parsedJson = JSON.parse(jsonText);
         if (!Array.isArray(parsedJson)) {
@@ -459,6 +509,7 @@
         }
 
         let sha = null;
+        console.log("Verificando produtos.json no GitHub"); // Log
         const getResponse = await fetch('https://api.github.com/repos/bingaby/centrodecompra/contents/produtos.json', {
           method: 'GET',
           headers: {
@@ -471,11 +522,13 @@
         if (getResponse.ok) {
           const fileData = await getResponse.json();
           sha = fileData.sha;
+          console.log("SHA obtido:", sha); // Log
         } else if (getResponse.status !== 404) {
           const errorData = await getResponse.json();
           throw new Error(`Erro ao verificar produtos.json: ${errorData.message || getResponse.statusText}`);
         }
 
+        console.log("Enviando atualização para o GitHub"); // Log
         const content = btoa(unescape(encodeURIComponent(jsonText)));
         const updateResponse = await fetch('https://api.github.com/repos/bingaby/centrodecompra/contents/produtos.json', {
           method: 'PUT',
@@ -493,6 +546,7 @@
         });
 
         if (updateResponse.ok) {
+          console.log("GitHub atualizado com sucesso"); // Log
           mensagem.textContent = 'produtos.json atualizado no GitHub! Pode demorar alguns minutos para aparecer na página principal.';
           erro.textContent = '';
           localStorage.setItem('produtos_cache', jsonText);
@@ -501,7 +555,7 @@
           throw new Error(`Erro ao atualizar produtos.json: ${errorData.message || updateResponse.statusText}`);
         }
       } catch (error) {
-        console.error('Erro ao sincronizar com o GitHub:', error);
+        console.error('Erro ao sincronizar com o GitHub:', error); // Log
         erro.textContent = error.message || 'Erro ao sincronizar com o GitHub. Verifique o token e tente novamente.';
         mensagem.textContent = '';
       }
@@ -514,7 +568,7 @@
       const erro = document.getElementById('erro');
       const loading = document.getElementById('loading');
       if (!mensagem || !erro || !loading) {
-        console.error('Elementos DOM não encontrados');
+        console.error('Elementos DOM não encontrados em importarJSON');
         return;
       }
       if (!importText) {
@@ -523,6 +577,7 @@
         return;
       }
       try {
+        console.log("Importando JSON"); // Log
         loading.style.display = 'block';
         const importedProdutos = JSON.parse(importText);
         if (!Array.isArray(importedProdutos)) {
@@ -540,6 +595,7 @@
         mensagem.textContent = 'Produtos importados com sucesso! Clique em "Atualizar produtos.json no GitHub" para sincronizar.';
         erro.textContent = '';
         document.getElementById('import-json').value = '';
+        console.log("JSON importado com sucesso"); // Log
       } catch (error) {
         console.error('Erro ao importar JSON:', error);
         erro.textContent = error.message || 'Erro ao importar JSON. Verifique o formato e tente novamente.';
@@ -554,6 +610,8 @@
       const missingElements = criticalElements.filter((id) => !document.getElementById(id));
       if (missingElements.length > 0) {
         console.error('Elementos DOM críticos não encontrados:', missingElements);
+        const erro = document.getElementById('erro');
+        if (erro) erro.textContent = 'Erro interno: Elementos da página não encontrados!';
         return;
       }
       inicializarProdutos();
