--- a/cupom.html
+++ b/cupom.html
@@ -73,37 +73,37 @@
     <div class="cupons-grid">
       <div class="cupom-card">
         <img src="logos/amazon.png" alt="Amazon">
-        <div class="cupom-codigo" id="cupom1">AMAZON10</div>
+        <div class="cupom-codigo" id="cupom1"></div>
         <button class="btn-copiar" onclick="copiarCupom('cupom1')">Copiar Cupom</button>
       </div>
 
       <div class="cupom-card">
         <img src="logos/shein.png" alt="Shein">
-        <div class="cupom-codigo" id="cupom2">SHEIN15</div>
+        <div class="cupom-codigo" id="cupom2"></div>
         <button class="btn-copiar" onclick="copiarCupom('cupom2')">Copiar Cupom</button>
       </div>
 
       <div class="cupom-card">
         <img src="logos/magalu.png" alt="Magalu">
-        <div class="cupom-codigo" id="cupom3">MAGALU5</div>
+        <div class="cupom-codigo" id="cupom3"></div>
         <button class="btn-copiar" onclick="copiarCupom('cupom3')">Copiar Cupom</button>
       </div>
 
       <div class="cupom-card">
         <img src="logos/mercadolivre.jpg" alt="Mercado Livre">
-        <div class="cupom-codigo" id="cupom4">MLCUPOM20</div>
+        <div class="cupom-codigo" id="cupom4"></div>
         <button class="btn-copiar" onclick="copiarCupom('cupom4')">Copiar Cupom</button>
       </div>
 
       <div class="cupom-card">
         <img src="logos/shopee.png" alt="Shopee">
-        <div class="cupom-codigo" id="cupom5">SHOPEE10</div>
+        <div class="cupom-codigo" id="cupom5"></div>
         <button class="btn-copiar" onclick="copiarCupom('cupom5')">Copiar Cupom</button>
       </div>
 
       <div class="cupom-card">
         <img src="logos/aliexpress.png" alt="AliExpress">
-        <div class="cupom-codigo" id="cupom6">ALI20BR</div>
+        <div class="cupom-codigo" id="cupom6"></div>
         <button class="btn-copiar" onclick="copiarCupom('cupom6')">Copiar Cupom</button>
       </div>
     </div>
